# StreamDock-OBS-Plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
cmake/common/: helpers_common.cmake
cmake/modules/: FindWrapOpenGL.cmake
data/locale/: de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  ja-JP.ini  ko-KR.ini  zh-CN.ini
include/: event-manager.h  json-rpc.h  plugin-support.h  websocket-server.h
include/handlers/: handler-events.h  handler-obs-frontend.h  handler-obs-scene.h  handler-obs-source.h  handler-system.h
include/ui/: about-dialog.h
src/: event-manager.cpp  json-rpc.cpp  plugin-main.cpp  plugin-support.c.in  websocket-server.cpp
src/handlers/: handler-events.cpp  handler-obs-frontend.cpp  handler-obs-scene.cpp  handler-obs-source.cpp  handler-system.cpp
src/ui/: about-dialog.cpp  about.qrc  about.ui
